Fixed format of experience section to have cleaner look; Fixed layout issues with parallax on header section; Updated some info for experiences; Fixed overflow issues with skills section

--- a/src/css/timelinestyle.css
+++ b/src/css/timelinestyle.css
@@ -4,6 +4,17 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
+.work-exp::before {
+    content: '';
+    position: absolute;
+    top: 16px;
+    right: 100%;
+    height: 0;
+    width: 0;
+    border: 7px solid transparent;
+    border-right: 7px solid #ffffff;
+}
+
 ul,label{
 	margin:0;
 	padding:0;
